--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -63,6 +63,8 @@ target 'Runner' do
     File.symlink(p[:path], symlink)
     pod p[:name], :path => File.join(symlink, 'ios')
   }
+
+  pod 'SwiftyTesseract-HTMHell', :git => 'https://github.com/HTMHell/SwiftyTesseract.git', :tag => '2.2.4'
 end
 
 # Prevent Cocoapods from embedding a second Flutter framework and causing an error with the new Xcode build system.
